bootstrapped flux operator and instance

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,8 +1,13 @@
 [env]
+CLUSTER = "spot"
+KUBE_CONFIG_PATH = "{{config_root}}/kubeconfig"
 KUBECONFIG = "{{config_root}}/kubeconfig"
+ROOT_DIR = "{{config_root}}"
 
 [tools]
 "aqua:cilium/cilium-cli" = "0.18.3"
+"aqua:cli/cli" = "2.72.0"
+"aqua:cloudflare/cloudflared" = "2025.4.2"
 "aqua:helm/helm" = "3.17.3"
 "aqua:helmfile/helmfile" = "1.0.0"
 "aqua:kubernetes/kubectl" = "1.33.0"
