--- a/kubernetes/clusters/spot/ks.yaml
+++ b/kubernetes/clusters/spot/ks.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
+  path: ./kubernetes/apps
   prune: true
   sourceRef:
     kind: GitRepository
