--- a/kubernetes/clusters/spot/flux-instance/helmrelease.yaml
+++ b/kubernetes/clusters/spot/flux-instance/helmrelease.yaml
@@ -6,7 +6,7 @@ metadata:
   name: flux-instance
   namespace: flux-system
 spec:
-  interval: 5m
+  interval: 1h
   ref:
     tag: 0.19.0
   url: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
@@ -32,7 +32,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
-      strategy: rollback
   valuesFrom:
     - kind: ConfigMap
       name: flux-instance-values
