--- a/kubernetes/clusters/spot/flux-operator/helmrelease.yaml
+++ b/kubernetes/clusters/spot/flux-operator/helmrelease.yaml
@@ -6,7 +6,7 @@ metadata:
   name: flux-operator
   namespace: flux-system
 spec:
-  interval: 5m
+  interval: 1h
   ref:
     tag: 0.19.0
   url: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
