fixed flux-instance ConfigMap name mapping

--- a/kubernetes/clusters/spot/flux-instance/kustomization.yaml
+++ b/kubernetes/clusters/spot/flux-instance/kustomization.yaml
@@ -7,5 +7,7 @@ configMapGenerator:
     namespace: flux-system
     files:
       - values.yaml=./values.yaml
+configurations:
+  - ./kustomizeconfig.yaml
 resources:
   - ./helmrelease.yaml
