--- a/kubernetes/apps/cilium/helmrelease.yaml
+++ b/kubernetes/apps/cilium/helmrelease.yaml
@@ -1,15 +1,13 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/ocirepository-source-v1beta2.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1beta2.json
 apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: OCIRepository
+kind: HelmRepository
 metadata:
   name: cilium
   namespace: kube-system
 spec:
   interval: 1h
-  ref:
-    tag: 1.17.0
-  url: oci://ghcr.io/home-operations/charts-mirror/cilium
+  url: https://helm.cilium.io
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -18,9 +16,14 @@ metadata:
   name: cilium
   namespace: kube-system
 spec:
-  chartRef:
-    kind: OCIRepository
-    name: cilium
+  chart:
+    spec:
+      chart: cilium
+      sourceRef:
+        kind: HelmRepository
+        name: cilium
+        namespace: kube-system
+      version: 1.17.0
   install:
     remediation:
       retries: -1
