enabled service monitors for existing resources

--- a/kubernetes/apps/cilium/values.yaml
+++ b/kubernetes/apps/cilium/values.yaml
@@ -12,6 +12,16 @@ gatewayAPI:
 ipam:
   mode: kubernetes
 kubeProxyReplacement: false
+operator:
+  prometheus:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+prometheus:
+  enabled: true
+  serviceMonitor:
+    enabled: true
+    trustCRDsExist: true
 securityContext:
   capabilities:
     ciliumAgent:
