--- a/kubernetes/clusters/spot/flux-operator/helmrelease.yaml
+++ b/kubernetes/clusters/spot/flux-operator/helmrelease.yaml
@@ -30,3 +30,6 @@ spec:
     remediation:
       retries: 3
       strategy: rollback
+  valuesFrom:
+    - kind: ConfigMap
+      name: flux-operator-values
