--- a/kubernetes/clusters/spot/flux-operator/kustomization.yaml
+++ b/kubernetes/clusters/spot/flux-operator/kustomization.yaml
@@ -2,5 +2,12 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+configMapGenerator:
+  - name: flux-operator-values
+    namespace: flux-system
+    files:
+      - values.yaml=./values.yaml
+configurations:
+  - ./kustomizeconfig.yaml
 resources:
   - ./helmrelease.yaml
