--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -8,6 +8,7 @@ releases:
   - chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     name: flux-operator
     namespace: flux-system
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/clusters/{{ requiredEnv "CLUSTER" }}/flux-operator/values.yaml']
     version: 0.19.0
   - chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     name: flux-instance
