--- a/kubernetes/apps/grafana/kustomization.yaml
+++ b/kubernetes/apps/grafana/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 configMapGenerator:
-  - name: kube-prometheus-stack-values
+  - name: grafana-values
     namespace: observability
     files:
       - values.yaml=./values.yaml
