--- a/kubernetes/apps/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/kube-prometheus-stack/helmrelease.yaml
@@ -32,3 +32,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  valuesFrom:
+    - kind: ConfigMap
+      name: kube-prometheus-stack-values
