--- a/kubernetes/apps/grafana/values.yaml
+++ b/kubernetes/apps/grafana/values.yaml
@@ -8,3 +8,6 @@ datasources:
         access: proxy
         isDefault: true
         url: http://kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090/
+sidecar:
+  dashboards:
+    enabled: true
