move kube-prometheus-stack charts into their own folder in grafana

--- a/kubernetes/apps/kube-prometheus-stack/values.yaml
+++ b/kubernetes/apps/kube-prometheus-stack/values.yaml
@@ -2,3 +2,7 @@
 grafana:
   enabled: false
   forceDeployDashboards: true
+  sidecar:
+    dashboards:
+      annotations:
+        grafana_folder: kube-prometheus-stack
