--- a/kubernetes/apps/grafana/values.yaml
+++ b/kubernetes/apps/grafana/values.yaml
@@ -1,13 +1,28 @@
 ---
+dashboardProviders:
+  dashboardproviders.yaml:
+    apiVersion: 1
+    providers:
+      - disableDeletion: false
+        editable: true
+        folder: ''
+        name: 'default'
+        options:
+          path: /var/lib/grafana/dashboards/default
+        orgId: 1
+        type: file
 datasources:
   datasources.yaml:
     apiVersion: 1
     datasources:
-      - name: Prometheus
-        type: prometheus
-        access: proxy
+      - access: proxy
         isDefault: true
+        name: Prometheus
+        type: prometheus
         url: http://kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090/
 sidecar:
   dashboards:
     enabled: true
+    folderAnnotation: grafana_folder
+    provider:
+      foldersFromFilesStructure: true
