allow prometheus to refer to service monitors not defined in kube-prometheus-stack

--- a/kubernetes/apps/kube-prometheus-stack/values.yaml
+++ b/kubernetes/apps/kube-prometheus-stack/values.yaml
@@ -6,3 +6,6 @@ grafana:
     dashboards:
       annotations:
         grafana_folder: kube-prometheus-stack
+prometheus:
+  prometheusSpec:
+    serviceMonitorSelectorNilUsesHelmValues: false
