moved all repositories into the flux-system namespace

--- a/kubernetes/apps/cilium/kustomization.yaml
+++ b/kubernetes/apps/cilium/kustomization.yaml
@@ -8,6 +8,6 @@ configMapGenerator:
     files:
       - values.yaml=./values.yaml
 configurations:
-  - ./kustomizeconfig.yaml
+  - kustomizeconfig.yaml
 resources:
-  - ./helmrelease.yaml
+  - helmrelease.yaml
