--- a/kubernetes/apps/cilium/helmrelease.yaml
+++ b/kubernetes/apps/cilium/helmrelease.yaml
@@ -1,14 +1,4 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1beta2.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
-metadata:
-  name: cilium
-  namespace: kube-system
-spec:
-  interval: 1h
-  url: https://helm.cilium.io
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -22,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: cilium
-        namespace: kube-system
+        namespace: flux-system
       version: 1.17.0
   install:
     remediation:
