--- a/.mise.toml
+++ b/.mise.toml
@@ -8,6 +8,7 @@ ROOT_DIR = "{{config_root}}"
 "aqua:cilium/cilium-cli" = "0.18.3"
 "aqua:cli/cli" = "2.72.0"
 "aqua:cloudflare/cloudflared" = "2025.4.2"
+"aqua:derailed/popeye" = "0.22.1"
 "aqua:helm/helm" = "3.17.3"
 "aqua:helmfile/helmfile" = "1.0.0"
 "aqua:kubernetes/kubectl" = "1.33.0"
