added basic gateway APIs served by cilium

--- a/kubernetes/apps/cilium/kustomization.yaml
+++ b/kubernetes/apps/cilium/kustomization.yaml
@@ -10,4 +10,6 @@ configMapGenerator:
 configurations:
   - kustomizeconfig.yaml
 resources:
+  - gateway-external.yaml
+  - gateway-internal.yaml
   - helmrelease.yaml
