enabled cilium nodeport implementation

--- a/kubernetes/apps/cilium/values.yaml
+++ b/kubernetes/apps/cilium/values.yaml
@@ -12,6 +12,8 @@ gatewayAPI:
 ipam:
   mode: kubernetes
 kubeProxyReplacement: false
+nodePort:
+  enabled: true
 operator:
   prometheus:
     enabled: true
