--- a/kubernetes/repositories/helm/kustomization.yaml
+++ b/kubernetes/repositories/helm/kustomization.yaml
@@ -4,4 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cilium.yaml
+  - external-dns.yaml
   - prometheus-community.yaml
