--- a/kubernetes/apps/cilium/values.yaml
+++ b/kubernetes/apps/cilium/values.yaml
@@ -11,7 +11,7 @@ gatewayAPI:
   enabled: true
 ipam:
   mode: kubernetes
-kubeProxyReplacement: false
+kubeProxyReplacement: true
 nodePort:
   enabled: true
 operator:
