added http route for grafana (external)

--- a/kubernetes/apps/grafana/values.yaml
+++ b/kubernetes/apps/grafana/values.yaml
@@ -28,6 +28,14 @@ datasources:
         name: Prometheus
         type: prometheus
         url: http://kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090/
+route:
+  main:
+    enabled: true
+    hostnames: ["grafana.themacdonald.house"]
+    parentRefs:
+      - name: external
+        namespace: kube-system
+        sectionName: http
 sidecar:
   dashboards:
     enabled: true
