--- a/kubernetes/apps/cilium/gateway-external.yaml
+++ b/kubernetes/apps/cilium/gateway-external.yaml
@@ -5,8 +5,13 @@ kind: Gateway
 metadata:
   name: external
   namespace: kube-system
+  annotations:
+    external-dns.alpha.kubernetes.io/target: &hostname homelab.themacdonald.house
 spec:
   gatewayClassName: cilium
+  infrastructure:
+    annotations:
+      external-dns.alpha.kubernetes.io/hostname: *hostname
   listeners:
     - allowedRoutes:
         namespaces:
