--- a/kubernetes/apps/cilium/gateway-external.yaml
+++ b/kubernetes/apps/cilium/gateway-external.yaml
@@ -15,7 +15,7 @@ spec:
   listeners:
     - allowedRoutes:
         namespaces:
-          from: Same
+          from: All
       name: http
       port: 80
       protocol: HTTP
