enable cilium envoy proxy

--- a/kubernetes/apps/cilium/values.yaml
+++ b/kubernetes/apps/cilium/values.yaml
@@ -4,7 +4,7 @@ cgroup:
     enabled: false
   hostRoot: /sys/fs/cgroup
 envoy:
-  enabled: false
+  baseID: 100
 gatewayAPI:
   enableAlpn: true
   enableAppProtocol: true
