enable gateway API hostNetwork

--- a/kubernetes/apps/cilium/values.yaml
+++ b/kubernetes/apps/cilium/values.yaml
@@ -9,6 +9,8 @@ gatewayAPI:
   enableAlpn: true
   enableAppProtocol: true
   enabled: true
+  hostNetwork:
+    enabled: true
 ipam:
   mode: kubernetes
 kubeProxyReplacement: false
