enabled external gateway

--- a/kubernetes/apps/cilium/kustomization.yaml
+++ b/kubernetes/apps/cilium/kustomization.yaml
@@ -10,7 +10,7 @@ configMapGenerator:
 configurations:
   - kustomizeconfig.yaml
 resources:
-  # - gateway-external.yaml
+  - gateway-external.yaml
   # - gateway-internal.yaml
   - helmrelease.yaml
   - networks.yaml
