--- a/kubernetes/apps/cilium/values.yaml
+++ b/kubernetes/apps/cilium/values.yaml
@@ -14,6 +14,8 @@ gatewayAPI:
 ipam:
   mode: kubernetes
 kubeProxyReplacement: false
+nodePort:
+  enabled: true
 operator:
   prometheus:
     enabled: true
