--- a/kubernetes/apps/cloudflared/kustomization.yaml
+++ b/kubernetes/apps/cloudflared/kustomization.yaml
@@ -3,6 +3,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 configMapGenerator:
+  - name: cloudflared-config
+    namespace: network
+    files:
+      - config.yaml=./config.yaml
   - name: cloudflared-values
     namespace: network
     files:
