fixed kustomize config to allow cloudflared to refer to dynamic configmap name

--- a/kubernetes/apps/cloudflared/kustomizeconfig.yaml
+++ b/kubernetes/apps/cloudflared/kustomizeconfig.yaml
@@ -4,4 +4,9 @@ nameReference:
     version: v1
     fieldSpecs:
       - kind: HelmRelease
+        path: spec/values/persistence/config/name
+  - kind: ConfigMap
+    version: v1
+    fieldSpecs:
+      - kind: HelmRelease
         path: spec/valuesFrom/name
