moved namespace from cloudflared helmrelease and dnsendpoint into kustomization file

--- a/kubernetes/apps/cloudflared/kustomization.yaml
+++ b/kubernetes/apps/cloudflared/kustomization.yaml
@@ -9,6 +9,7 @@ configMapGenerator:
       - config.yaml=./config.yaml
 configurations:
   - kustomizeconfig.yaml
+namespace: network
 resources:
   - dnsendpoint.yaml
   - helmrelease.yaml
