--- a/kubernetes/apps/cilium/gateway-external.yaml
+++ b/kubernetes/apps/cilium/gateway-external.yaml
@@ -15,7 +15,15 @@ spec:
   listeners:
     - allowedRoutes:
         namespaces:
-          from: All
+          from: Same
+      hostname: "*.themacdonald.house"
       name: http
       port: 80
       protocol: HTTP
+    - allowedRoutes:
+        namespaces:
+          from: Same
+      hostname: "*.themacdonald.house"
+      name: https
+      port: 443
+      protocol: HTTPS
