--- a/kubernetes/apps/ingress-nginx-internal/values.yaml
+++ b/kubernetes/apps/ingress-nginx-internal/values.yaml
@@ -1,2 +1,9 @@
 ---
+controller:
+  ingressClassResource:
+    name: internal
+    default: true
+    controllerValue: k8s.io/internal
+  service:
+    loadBalancerClass: tailscale
 fullnameOverride: ingress-nginx-internal
