--- a/kubernetes/apps/tailscale-operator/helmrelease.yaml
+++ b/kubernetes/apps/tailscale-operator/helmrelease.yaml
@@ -3,12 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: tailscale
+  name: tailscale-operator
   namespace: network
 spec:
   chart:
     spec:
-      chart: tailscale
+      chart: tailscale-operator
       sourceRef:
         kind: HelmRepository
         name: tailscale
@@ -24,4 +24,4 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: tailscale-values
+      name: tailscale-operator-values
