--- a/kubernetes/apps/tailscale-operator/kustomization.yaml
+++ b/kubernetes/apps/tailscale-operator/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 configMapGenerator:
-  - name: tailscale-values
+  - name: tailscale-operator-values
     namespace: network
     files:
       - values.yaml=./values.yaml
