mobed ingress-nginx-internal namespace to kustomization file

--- a/kubernetes/apps/ingress-nginx-internal/kustomization.yaml
+++ b/kubernetes/apps/ingress-nginx-internal/kustomization.yaml
@@ -9,5 +9,6 @@ configMapGenerator:
       - values.yaml=./values.yaml
 configurations:
   - kustomizeconfig.yaml
+namespace: network
 resources:
   - helmrelease.yaml
