--- a/kubernetes/repositories/helm/kustomization.yaml
+++ b/kubernetes/repositories/helm/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - cilium.yaml
   - external-dns.yaml
   - ingress-nginx.yaml
+  - jetstack.yaml
   - prometheus-community.yaml
   - tailscale.yaml
