added tls certificate for main domain

--- a/kubernetes/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/kustomization.yaml
@@ -10,5 +10,6 @@ configurations:
   - kustomizeconfig.yaml
 namespace: cert-manager
 resources:
+  - certificate-tls.yaml
   - clusterissuer.yaml
   - helmrelease.yaml
