--- a/kubernetes/apps/cert-manager/certificate-tls.yaml
+++ b/kubernetes/apps/cert-manager/certificate-tls.yaml
@@ -3,7 +3,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "themacdonald-house-production"
+  name: themacdonald-house-production
 spec:
   commonName: themacdonald.house
   dnsNames:
