--- a/kubernetes/apps/ingress-nginx-internal/values.yaml
+++ b/kubernetes/apps/ingress-nginx-internal/values.yaml
@@ -7,6 +7,8 @@ controller:
           operator: In
           values:
             - internal
+  extraArgs:
+    default-ssl-certificate: cert-manager/themacdonald-house-production-tls
   ingressClassResource:
     name: internal
     default: true
