added tls host to grafana

--- a/kubernetes/apps/grafana/values.yaml
+++ b/kubernetes/apps/grafana/values.yaml
@@ -50,6 +50,9 @@ ingress:
   hosts:
     - grafana.themacdonald.house
   ingressClassName: internal
+  tls:
+    - hosts:
+        - grafana.themacdonald.house
 sidecar:
   dashboards:
     enabled: true
