added GF_SERVER_ROOT_URL to grafana

--- a/kubernetes/apps/grafana/values.yaml
+++ b/kubernetes/apps/grafana/values.yaml
@@ -43,6 +43,8 @@ datasources:
         name: Prometheus
         type: prometheus
         url: http://kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090/
+env:
+  GF_SERVER_ROOT_URL: https://grafana.themacdonald.house
 ingress:
   annotations:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
