--- a/kubernetes/apps/base/flux-system/kustomization.yaml
+++ b/kubernetes/apps/base/flux-system/kustomization.yaml
@@ -2,10 +2,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: flux-system
 resources:
-  - cilium.yaml
-  - external-dns.yaml
-  - ingress-nginx.yaml
-  - jetstack.yaml
-  - prometheus-community.yaml
-  - tailscale.yaml
+  - namespace.yaml
