--- a/kubernetes/apps/base/network/cert-manager/ks.yaml
+++ b/kubernetes/apps/base/network/cert-manager/ks.yaml
@@ -3,15 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster
-  namespace: flux-system
+  name: cert-manager
+  namespace: network
 spec:
-  interval: 10m
-  path: ./kubernetes/apps/spot
+  interval: 30m
+  path: ./kubernetes/apps/base/network/cert-manager/app
   prune: true
+  retryInterval: 1m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 30m
-  wait: false
+  timeout: 3m
+  wait: true
