--- a/kubernetes/clusters/spot/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/clusters/spot/flux-system/flux-operator/ks.yaml
@@ -3,15 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster
+  name: flux-operator
   namespace: flux-system
 spec:
-  interval: 10m
-  path: ./kubernetes/apps/spot
+  interval: 30m
+  path: ./kubernetes/clusters/spot/flux-system/flux-operator/app
   prune: true
+  retryInterval: 1m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 30m
-  wait: false
+  timeout: 3m
+  wait: true
