--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -8,11 +8,11 @@ releases:
   - chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     name: flux-operator
     namespace: flux-system
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/clusters/{{ requiredEnv "CLUSTER" }}/flux-operator/values.yaml']
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/clusters/{{ requiredEnv "CLUSTER" }}/flux-system/flux-operator/app/values.yaml']
     version: 0.19.0
   - chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     name: flux-instance
     namespace: flux-system
     needs: ['flux-system/flux-operator']
-    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/clusters/{{ requiredEnv "CLUSTER" }}/flux-instance/values.yaml']
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/clusters/{{ requiredEnv "CLUSTER" }}/flux-system/flux-instance/app/values.yaml']
     version: 0.19.0
