--- a/kubernetes/apps/base/kube-system/cilium/app/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/values.yaml
@@ -30,6 +30,7 @@ operator:
     enabled: true
     serviceMonitor:
       enabled: true
+  replicas: 1
 prometheus:
   enabled: true
   serviceMonitor:
