set flux cluster settings,, mainly to disable troublesome network policies

--- a/kubernetes/clusters/home/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/clusters/home/flux-system/flux-instance/app/values.yaml
@@ -1,5 +1,9 @@
 ---
 instance:
+  cluster:
+    domain: "cluster.local"
+    multitenant: false
+    networkPolicy: false
   components:
     - helm-controller
     - kustomize-controller
