--- a/kubernetes/apps/base/kube-system/cilium/app/gateway.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/gateway.yaml
@@ -3,8 +3,11 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: internal
+  name: main
 spec:
+  addresses:
+    - type: IPAddress
+      value: 192.168.0.180
   gatewayClassName: cilium
   listeners:
     - allowedRoutes:
@@ -13,3 +16,9 @@ spec:
       name: http
       port: 80
       protocol: HTTP
+    - allowedRoutes:
+        namespaces:
+          from: All
+      name: https
+      port: 443
+      protocol: HTTPS
