--- a/kubernetes/apps/base/kube-system/cilium/app/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/values.yaml
@@ -3,34 +3,32 @@ cgroup:
   autoMount:
     enabled: false
   hostRoot: /sys/fs/cgroup
+dashboards:
+  enabled: true
 envoy:
-  baseID: 100
-  securityContext:
-    capabilities:
-      envoy:
-        - BPF
-        - NET_ADMIN
-        - NET_BIND_SERVICE
-        - PERFMON
-        - SYS_ADMIN
-      keepCapNetBindService: true
+  prometheus:
+    serviceMonitor:
+      enabled: true
+  rollOutPods: true
 gatewayAPI:
   enableAlpn: true
-  enableAppProtocol: true
   enabled: true
-  hostNetwork:
-    enabled: true
 ipam:
   mode: kubernetes
-kubeProxyReplacement: false
-nodePort:
+k8sServiceHost: 127.0.0.1
+k8sServicePort: 6443
+kubeProxyReplacement: true
+l2announcements:
   enabled: true
 operator:
+  dashboards:
+    enabled: true
   prometheus:
     enabled: true
     serviceMonitor:
       enabled: true
   replicas: 1
+  rollOutPods: true
 prometheus:
   enabled: true
   serviceMonitor:
