enabled observability in home cluster

--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -62,7 +62,7 @@ route:
     hostnames:
       - grafana.themacdonald.house
     parentRefs:
-      - name: external
+      - name: main
         namespace: kube-system
         sectionName: https
 sidecar:
