--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -13,6 +13,6 @@ resources:
   # - ../base/network/external-dns/ks.yaml
   # - ../base/network/ingress-nginx-internal/ks.yaml
   # - ../base/network/tailscale-operator/ks.yaml
-  # - ../base/observability
-  # - ../base/observability/grafana/ks.yaml
-  # - ../base/observability/kube-prometheus-stack/ks.yaml
+  - ../base/observability
+  - ../base/observability/grafana/ks.yaml
+  - ../base/observability/kube-prometheus-stack/ks.yaml
