--- a/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
@@ -3,11 +3,11 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: main
+  name: external
 spec:
   addresses:
     - type: IPAddress
-      value: 192.168.0.180
+      value: 192.168.0.181
   gatewayClassName: cilium
   listeners:
     - allowedRoutes:
