--- a/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
@@ -4,21 +4,28 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: external
+  annotations:
+    external-dns.alpha.kubernetes.io/target: &hostname external.themacdonald.house
 spec:
   addresses:
     - type: IPAddress
       value: 192.168.0.181
   gatewayClassName: cilium
+  infrastructure:
+    annotations:
+      external-dns.alpha.kubernetes.io/hostname: *hostname
   listeners:
     - allowedRoutes:
         namespaces:
           from: Same
+      hostname: "*.themacdonald.house"
       name: http
       port: 80
       protocol: HTTP
     - allowedRoutes:
         namespaces:
           from: All
+      hostname: "*.themacdonald.house"
       name: https
       port: 443
       protocol: HTTPS
