--- a/kubernetes/apps/base/network/external-dns/pihole/values.yaml
+++ b/kubernetes/apps/base/network/external-dns/pihole/values.yaml
@@ -8,6 +8,7 @@ env:
         key: *name
         name: external-dns-pihole
 extraArgs:
+  - --pihole-api-version=6
   - --pihole-server=http://192.168.0.53
 policy: sync
 provider: pihole
