temporarily remove external-dns-pihole helmrelease to soon add resources manually

--- a/kubernetes/apps/base/network/external-dns/pihole/kustomization.yaml
+++ b/kubernetes/apps/base/network/external-dns/pihole/kustomization.yaml
@@ -9,5 +9,5 @@ configMapGenerator:
       - values.yaml=./values.yaml
 configurations:
   - kustomizeconfig.yaml
-resources:
-  - helmrelease.yaml
+# resources:
+  # - helmrelease.yaml
