temporarily move grafana to http only

--- a/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
@@ -17,7 +17,7 @@ spec:
   listeners:
     - allowedRoutes:
         namespaces:
-          from: Same
+          from: All
       hostname: "*.themacdonald.house"
       name: http
       port: 80
