--- a/kubernetes/apps/base/security/cert-manager/ks.yaml
+++ b/kubernetes/apps/base/security/cert-manager/ks.yaml
@@ -4,10 +4,10 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cert-manager
-  namespace: network
+  namespace: security
 spec:
   interval: 30m
-  path: ./kubernetes/apps/base/network/cert-manager/app
+  path: ./kubernetes/apps/base/security/cert-manager/app
   prune: true
   retryInterval: 1m
   sourceRef:
