--- a/kubernetes/apps/base/security/kustomization.yaml
+++ b/kubernetes/apps/base/security/kustomization.yaml
@@ -2,9 +2,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kube-system
+namespace: security
 resources:
-  - certificate.yaml
-  - external.yaml
-  - internal.yaml
-  - redirect.yaml
+  - namespace.yaml
