enabled cert-manager cluster issuer

--- a/kubernetes/apps/base/security/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/base/security/cert-manager/app/kustomization.yaml
@@ -10,5 +10,5 @@ configurations:
   - kustomizeconfig.yaml
 namespace: security
 resources:
-  # - clusterissuer.yaml
+  - clusterissuer.yaml
   - helmrelease.yaml
