added tls certificate to external and internal gateway api

--- a/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
@@ -29,3 +29,7 @@ spec:
       name: https
       port: 443
       protocol: HTTPS
+      tls:
+        certificateRefs:
+          - kind: Secret
+            name: themacdonald-house-tls
