--- a/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
@@ -17,7 +17,7 @@ spec:
   listeners:
     - allowedRoutes:
         namespaces:
-          from: All
+          from: Same
       hostname: "*.themacdonald.house"
       name: http
       port: 80
@@ -29,3 +29,7 @@ spec:
       name: https
       port: 443
       protocol: HTTPS
+      tls:
+        certificateRefs:
+          - kind: Secret
+            name: themacdonald-house-tls
