--- a/kubernetes/apps/base/kube-system/cilium/gateway/redirect.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/redirect.yaml
@@ -11,9 +11,9 @@ spec:
     - name: external
       namespace: kube-system
       sectionName: http
-    # - name: internal
-    #   namespace: kube-system
-    #   sectionName: http
+    - name: internal
+      namespace: kube-system
+      sectionName: http
   rules:
     - filters:
         - requestRedirect:
