--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -64,7 +64,7 @@ route:
     parentRefs:
       - name: internal
         namespace: kube-system
-        sectionName: http
+        sectionName: https
 sidecar:
   dashboards:
     enabled: true
