--- a/kubernetes/apps/base/network/external-dns/cloudflare/helmrelease.yaml
+++ b/kubernetes/apps/base/network/external-dns/cloudflare/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: external-dns
+  name: external-dns-cloudflare
   namespace: network
 spec:
   chart:
@@ -24,4 +24,4 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: external-dns-values
+      name: external-dns-cloudflare-values
