--- a/kubernetes/apps/base/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/apps/base/network/cloudflared/app/helmrelease.yaml
@@ -27,8 +27,9 @@ spec:
               - run
             env:
               NO_AUTOUPDATE: true
-              TUNNEL_METRICS: 0.0.0.0:8080
               TUNNEL_LOGLEVEL: debug
+              TUNNEL_METRICS: 0.0.0.0:8080
+              TUNNEL_TRANSPORT_PROTOCOL: quic
             envFrom:
               - secretRef:
                   name: cloudflared-token
