--- a/kubernetes/apps/base/network/external-dns/ks.yaml
+++ b/kubernetes/apps/base/network/external-dns/ks.yaml
@@ -1,21 +1,21 @@
-# ---
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: external-dns-cloudflare
-#   namespace: network
-# spec:
-#   interval: 30m
-#   path: ./kubernetes/apps/base/network/external-dns/app
-#   prune: true
-#   retryInterval: 1m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#     namespace: flux-system
-#   timeout: 3m
-#   wait: true
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: external-dns-cloudflare
+  namespace: network
+spec:
+  interval: 30m
+  path: ./kubernetes/apps/base/network/external-dns/cloudflare
+  prune: true
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  timeout: 3m
+  wait: true
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
