change external-dns-cloudflare secret name and enable cloudflared

--- a/kubernetes/apps/base/network/external-dns/cloudflare/values.yaml
+++ b/kubernetes/apps/base/network/external-dns/cloudflare/values.yaml
@@ -6,7 +6,7 @@ env:
     valueFrom:
       secretKeyRef:
         key: cloudflare_api_token
-        name: external-dns-cloudflare-secret
+        name: external-dns-cloudflare
 extraArgs:
   - --cloudflare-dns-records-per-page=1000
   - --cloudflare-proxied
