--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ../base/kube-system/cilium/ks.yaml
   - ../base/network
   # - ../base/network/cert-manager/ks.yaml
-  # - ../base/network/cloudflared/ks.yaml
+  - ../base/network/cloudflared/ks.yaml
   - ../base/network/external-dns/ks.yaml
   # - ../base/network/tailscale-operator/ks.yaml
   - ../base/observability
