added alertmanager data source to grafana

--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -28,6 +28,11 @@ datasources:
     apiVersion: 1
     datasources:
       - access: proxy
+        name: Alertmanager
+        type: alertmanager
+        uid: alertmanager
+        url: http://kube-prometheus-stack-alertmanager.observability.svc.cluster.local:9093/
+      - access: proxy
         isDefault: true
         name: Prometheus
         type: prometheus
