--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -23,6 +23,10 @@ dashboards:
     cilium-operator-dashboard:
       datasource: Prometheus
       url: https://raw.githubusercontent.com/cilium/cilium/refs/tags/v1.17.0/install/kubernetes/cilium/files/cilium-operator/dashboards/cilium-operator-dashboard.json
+    cloudflared:
+      datasource: Prometheus
+      gnetId: 17457
+      revision: 6
     external-dns:
       datasource: Prometheus
       gnetId: 15038
