hopefully fix cloudflared datasource

--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -29,8 +29,8 @@ dashboards:
       revision: 6
     external-dns:
       datasource:
-        name: DS_PROMETHEUS
-        value: Prometheus
+        - name: DS_PROMETHEUS
+          value: Prometheus
       gnetId: 15038
       revision: 3
           
