--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -28,8 +28,7 @@ dashboards:
       gnetId: 17457
       revision: 6
     external-dns:
-      datasource:
-        - { name: DS_PROMETHEUS, value: Prometheus }
+      datasource: null
       gnetId: 15038
       revision: 3
           
