time to debug using envoy logs

--- a/kubernetes/apps/base/kube-system/cilium/app/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/values.yaml
@@ -8,6 +8,8 @@ dashboards:
 endpointRoutes:
   enabled: true
 envoy:
+  log:
+    defaultLevel: debug
   prometheus:
     serviceMonitor:
       enabled: true
