--- a/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
@@ -22,14 +22,14 @@ spec:
       name: http
       port: 80
       protocol: HTTP
-    - allowedRoutes:
-        namespaces:
-          from: All
-      hostname: "*.themacdonald.house"
-      name: https
-      port: 443
-      protocol: HTTPS
-      tls:
-        certificateRefs:
-          - kind: Secret
-            name: themacdonald-house-tls
+    # - allowedRoutes:
+    #     namespaces:
+    #       from: All
+    #   hostname: "*.themacdonald.house"
+    #   name: https
+    #   port: 443
+    #   protocol: HTTPS
+    #   tls:
+    #     certificateRefs:
+    #       - kind: Secret
+    #         name: themacdonald-house-tls
