--- a/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
@@ -17,19 +17,19 @@ spec:
   listeners:
     - allowedRoutes:
         namespaces:
-          from: All
+          from: Same
       hostname: "*.themacdonald.house"
       name: http
       port: 80
       protocol: HTTP
-    # - allowedRoutes:
-    #     namespaces:
-    #       from: All
-    #   hostname: "*.themacdonald.house"
-    #   name: https
-    #   port: 443
-    #   protocol: HTTPS
-    #   tls:
-    #     certificateRefs:
-    #       - kind: Secret
-    #         name: themacdonald-house-tls
+    - allowedRoutes:
+        namespaces:
+          from: All
+      hostname: "*.themacdonald.house"
+      name: https
+      port: 443
+      protocol: HTTPS
+      tls:
+        certificateRefs:
+          - kind: Secret
+            name: themacdonald-house-tls
