--- a/kubernetes/apps/base/observability/kube-prometheus-stack/app/values.yaml
+++ b/kubernetes/apps/base/observability/kube-prometheus-stack/app/values.yaml
@@ -9,3 +9,12 @@ grafana:
 prometheus:
   prometheusSpec:
     serviceMonitorSelectorNilUsesHelmValues: false
+  route:
+    main:
+      enabled: true
+      hostnames:
+        - prometheus.themacdonald.house
+      parentRefs:
+        - name: internal
+          namespace: kube-system
+          sectionName: https
