envoy now has trace logs

--- a/kubernetes/apps/base/kube-system/cilium/app/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/values.yaml
@@ -9,7 +9,7 @@ endpointRoutes:
   enabled: true
 envoy:
   log:
-    defaultLevel: debug
+    defaultLevel: trace
   prometheus:
     serviceMonitor:
       enabled: true
