--- a/kubernetes/apps/base/kube-system/cilium/gateway/certificate.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/certificate.yaml
@@ -12,4 +12,12 @@ spec:
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt-production
+  privateKey:
+    algorithm: RSA
+    encoding: PKCS1
+    rotationPolicy: Always
+    size: 2048
   secretName: themacdonald-house-tls
+  usages:
+    - client auth
+    - server auth
