--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -62,7 +62,7 @@ route:
     parentRefs:
       - name: internal
         namespace: kube-system
-        sectionName: https
+        sectionName: http
 sidecar:
   dashboards:
     enabled: true
