--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -3,6 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../base/envoy-gateway-system
+  - ../base/envoy-gateway-system/eg/ks.yaml
   - ../base/flux-system
   - ../base/flux-system/addons/ks.yaml
   - ../base/kube-system
