--- a/kubernetes/apps/base/envoy-gateway-system/eg/ks.yaml
+++ b/kubernetes/apps/base/envoy-gateway-system/eg/ks.yaml
@@ -16,3 +16,21 @@ spec:
     namespace: flux-system
   timeout: 3m
   wait: true
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: eg-gateway
+  namespace: envoy-gateway-system
+spec:
+  interval: 30m
+  path: ./kubernetes/apps/base/envoy-gateway-system/eg/gateway
+  prune: true
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  timeout: 3m
+  wait: true
