moved routes over to envoy internal gateway

--- a/kubernetes/apps/base/kube-system/cilium/gateway/kustomization.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/kustomization.yaml
@@ -6,5 +6,5 @@ namespace: kube-system
 resources:
   - certificate.yaml
   - external.yaml
-  - internal.yaml
+  # - internal.yaml
   - redirect.yaml
