--- a/kubernetes/apps/base/envoy-gateway-system/eg/gateway/internal.yaml
+++ b/kubernetes/apps/base/envoy-gateway-system/eg/gateway/internal.yaml
@@ -4,8 +4,16 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: internal
+  annotations:
+    external-dns.alpha.kubernetes.io/target: &hostname internal.themacdonald.house
 spec:
+  addresses:
+    - type: IPAddress
+      value: 192.168.0.180
   gatewayClassName: eg
+  infrastructure:
+    annotations:
+      external-dns.alpha.kubernetes.io/hostname: *hostname
   listeners:
     - allowedRoutes:
         namespaces:
@@ -14,3 +22,14 @@ spec:
       name: http
       port: 80
       protocol: HTTP
+    - allowedRoutes:
+        namespaces:
+          from: All
+      hostname: "*.themacdonald.house"
+      name: https
+      port: 443
+      protocol: HTTPS
+      tls:
+        certificateRefs:
+          - kind: Secret
+            name: themacdonald-house-tls
